k8s/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: employee-platform
  labels:
    app: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - backend
                topologyKey: topology.kubernetes.io/zone
      containers:
        - name: backend
          image: europe-west1-docker.pkg.dev/cloudappproject-494314/dev-employee-platform/backend:d573638f
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
              ephemeral-storage: "500Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: employee-platform
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"3001":{}}}'
    cloud.google.com/backend-config: '{"ports":{"3001":"backend-timeout-config"}}'
spec:
  selector:
    app: backend
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
