k8s/05-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: employee-platform
  labels:
    app: frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - frontend
                topologyKey: topology.kubernetes.io/zone
      containers:
        - name: frontend
          image: europe-west1-docker.pkg.dev/empmanager-prod/dev-employee-platform/frontend:2594db68
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "500Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
              ephemeral-storage: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: employee-platform
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"80":{}}}'
    cloud.google.com/backend-config: '{"ports":{"80":"frontend-cdn-config"}}'
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
