k8s/20-locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-master
  namespace: employee-platform
  labels:
    app: locust
    role: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
      role: master
  template:
    metadata:
      labels:
        app: locust
        role: master
    spec:
      containers:
        - name: locust
          image: locustio/locust:latest
          ports:
            - containerPort: 8089
              name: http-web
            - containerPort: 5557
              name: comm
          command:
            - locust
            - -f
            - /mnt/locust/locustfile.py
            - --host
            - $(TARGET_URL)
            - --master
            - --web-port
            - "8089"
          volumeMounts:
            - name: locust-scripts
              mountPath: /mnt/locust
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: locust-scripts
          configMap:
            name: locust-scripts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker
  namespace: employee-platform
  labels:
    app: locust
    role: worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: locust
      role: worker
  template:
    metadata:
      labels:
        app: locust
        role: worker
    spec:
      containers:
        - name: locust
          image: locustio/locust:latest
          command:
            - locust
            - -f
            - /mnt/locust/locustfile.py
            - --host
            - $(TARGET_URL)
            - --worker
            - --master-host
            - $(LOCUST_MASTER_HOST)
          volumeMounts:
            - name: locust-scripts
              mountPath: /mnt/locust
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 512Mi
      volumes:
        - name: locust-scripts
          configMap:
            name: locust-scripts
---
apiVersion: v1
kind: Service
metadata:
  name: locust-master
  namespace: employee-platform
spec:
  selector:
    app: locust
    role: master
  ports:
    - name: http-web
      port: 8089
      targetPort: 8089
    - name: comm
      port: 5557
      targetPort: 5557
