k8s/20-gce-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-gce-ingress
  namespace: employee-platform
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "employee-cert"
spec:
  rules:
    - host: empmanager.duckdns.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3001
          - path: /ws
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
